--- a/juplaylist/public/index.html
+++ b/juplaylist/public/index.html
@@ -24,7 +24,17 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      style="
+        font-family: 'Poppins', sans-serif;
+        display: flex;
+        width: 100%;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+      "
+      >Looks like you need to enable JavaScript to use our website!</noscript
+    >
     <div id="root"></div>
   </body>
 </html>
